# STL

./: .gitignore  Erase_Remove Idiom.cpp  j.txt  printCollection.cpp
0x00_Podstawy_STL/02_vector/: CMakeLists.txt  (+2 more)
0x04_Algorytmy/: 01_warm-up_task_vector(0x03).cpp  02_unmodified(0x06).cpp  03_find.cpp  03_find_first_of.cpp  04_find_if__validation.cpp  05_find_first_of.search(0x07).cpp  06_search_algorithm(0x08).cpp  07_search_n.adjacent_find.cpp  07_transform(0x0A).cpp  08_generate(0x0A).cpp  09_ex_01.transform.generate_n(0x0B).cpp  09_generate.cpp  10_reverse.rotate.shift(0x0C).cpp  11_shuffle.random_mt19937(0x0C).cpp  11_shuffle.random_mt19937.cpp  12_ex_02.unique.copy.ostream_it(0x0D).cpp  12_transform.cpp  13_partition(0x0E).cpp  14_ex_03.sort(0x10).cpp  15_partial_sort.nth_element(0x11).cpp  16_Binary_search_algorithms(0x12).cpp  17_includes(0x13).cpp  18_operations_on_collections(0x13).cpp  19_copy.cpp  20_min.max_algorithms(0x14).cpp  21_minmax_element(0x14).cpp  22_iota[0x15].cpp  23_reduce_accumulate(0x15).cpp  24_partial_sum.inclusive_scan(0x15).cpp  25_adjacent_difference(0x15).cpp  26_transform_reduce.inner_product[0x15].cpp  27_ex_04.generate.sequence[0x15].cpp  27_ex_04[0x15].cpp  28_ex_05_quiz[0x18].cpp  29_count.cpp  CMakeLists.txt  count_if.any_of.all_of.cpp  ex_01.transform.generate_n.cpp  ex_02.erase.unique.copy.ostream.cpp  ex_03.sort.cpp  (+6 more)
deque/: CMakeLists.txt  deque.cpp
exercises/: CMakeLists.txt  a.out  array  array.cpp
exercises/06_removeVowels/: CMakeLists.txt
f_list/: f_list.cpp
list/: CMakeLists.txt  list.cpp
vector/: vector.cpp
(+28 files in other folders)
